// Original file: proto/account.proto

import type { Account as _accountPackage_Account, Account__Output as _accountPackage_Account__Output } from '../accountPackage/Account';

export interface UpdateAccountRequest {
  'updatedAccount'?: (_accountPackage_Account | null);
}

export interface UpdateAccountRequest__Output {
  'updatedAccount'?: (_accountPackage_Account__Output);
}
